# hellowindow

./: CMakeLists.txt
gui/: CMakeLists.txt
gui/form/: mainwindowbase.ui
gui/include/: mainwindow.h
gui/qml/: axiscontrol.qml  main.qml  rectangle.qml
gui/src/: main.cpp  mainwindow.cpp
